[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/DrillLight.png" type="Texture" id=1]
[ext_resource path="res://Sprites/BaseDrill copy.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Drill.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ExampleButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://GlowWorldEnvironment.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 26, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 78, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 104, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 130, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 156, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 182, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 208, 0, 26, 49 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 234, 0, 26, 49 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[node name="Drill" type="AnimatedSprite"]
position = Vector2( 256, 150 )
scale = Vector2( 3, 3 )
frames = SubResource( 11 )
script = ExtResource( 3 )

[node name="Light" type="Sprite" parent="."]
modulate = Color( 1.2, 1, 1, 1 )
show_behind_parent = true
position = Vector2( -0.00218344, 0.734011 )
texture = ExtResource( 1 )

[node name="LightTween" type="Tween" parent="."]

[node name="ExampleButton" parent="." instance=ExtResource( 4 )]
margin_left = -76.1606
margin_top = -15.4415
margin_right = -22.1606
margin_bottom = 17.5585
rect_scale = Vector2( 1, 1 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 5 )]
[connection signal="tween_all_completed" from="LightTween" to="." method="_on_LightTween_tween_all_completed"]
[connection signal="toggled" from="ExampleButton" to="." method="_on_ExampleButton_toggled"]
